Disable portal for tooltips and popovers in Header to fix z-index rendering issue

--- a/packages/client/src/blueprint.scss
+++ b/packages/client/src/blueprint.scss
@@ -78,7 +78,3 @@ $orange3: #ffdf75;
     }
   }
 }
-
-.shortcut-key-popover {
-  z-index: 1000 !important;
-}
